supporters logo alignment fix.

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -642,10 +642,6 @@ section h3.section-subheading {
     }
 }
 
-.supporters {
-    height: 100px;
-}
-
 .team-member {
     margin-bottom: 50px;
     text-align: center;
